# qtemu-win

./: .gitignore  CMakeLists.txt  qtemu.pro
src/: aboutwidget.cpp  aboutwidget.h  boot.cpp  boot.h  configwindow.cpp  configwindow.h  helpwidget.cpp  helpwidget.h  machine.cpp  machine.h  machineutils.cpp  machineutils.h  machinewizard.cpp  machinewizard.h  main.cpp  mainwindow.cpp  mainwindow.h  media.cpp  media.h  qemu.cpp  qemu.h
src/components/: customfilter.cpp  customfilter.h
src/export-import/: export.cpp  export.h  exportdetailspage.cpp  exportdetailspage.h  exportgeneralpage.cpp  exportgeneralpage.h  exportmediapage.cpp  exportmediapage.h  import.cpp  import.h  importdestinationpage.cpp  importdestinationpage.h  importdetailspage.cpp  importdetailspage.h  importgeneralpage.cpp  importgeneralpage.h  importmediapage.cpp  importmediapage.h
src/machineconfig/: machineconfigaccel.cpp  machineconfigaccel.h  machineconfigaudio.cpp  machineconfigaudio.h  machineconfigboot.cpp  machineconfigboot.h  machineconfiggeneral.cpp  machineconfiggeneral.h  machineconfiggeneraltabs.cpp  machineconfiggeneraltabs.h  machineconfighardware.cpp  machineconfighardware.h  machineconfighardwaretabs.cpp  machineconfighardwaretabs.h  machineconfigmedia.cpp  machineconfigmedia.h  machineconfignetwork.cpp  machineconfignetwork.h  machineconfigwindow.cpp  machineconfigwindow.h
src/newmachine/: acceleratorpage.cpp  acceleratorpage.h  conclusionpage.cpp  conclusionpage.h  diskpage.cpp  diskpage.h  generalpage.cpp  generalpage.h  hardwarepage.cpp  hardwarepage.h  machinepage.cpp  machinepage.h  memorypage.cpp  memorypage.h
src/utils/: firstrunwizard.cpp  firstrunwizard.h  logger.cpp  logger.h  newdiskwizard.cpp  newdiskwizard.h  systemutils.cpp  systemutils.h
